fix: adapt color contrast - a11y

--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -2,7 +2,7 @@
 
 $theme-colors: (
   primary-yellow: #fec902,
-  primary-yellow-dark: #ef7a20,
+  primary-yellow-dark: #ea6e10,
   primary-blue: #bce0f8,
   primary-blue-dark: #03719e,
   light: #ffffff,
